Cuda & FP16 implementation + documentation

--- a/WhisPeriment.ipynb
+++ b/WhisPeriment.ipynb
@@ -63,14 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Python       : 3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]\n",
       "wave         : Nov version infos available\n",
+      "torch        : 1.13.1+cu117\n",
       "numpy        : 1.24.1\n",
       "transformers : 4.25.1\n"
      ]
@@ -80,6 +82,7 @@
     "import struct\n",
     "import wave\n",
     "import torch \n",
+    "import sys\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -88,7 +91,9 @@
     "from transformers    import WhisperProcessor, WhisperForConditionalGeneration, __version__ \n",
     "from IPython.display import Audio, display\n",
     "\n",
+    "print(f\"Python       : {              sys.version}\")\n",
     "print(f\"wave         : Nov version infos available\")\n",
+    "print(f\"torch        : {        torch.__version__}\")\n",
     "print(f\"numpy        : {           np.__version__}\")\n",
     "print(f\"transformers : {             __version__ }\")"
    ]
