Cuda & FP16 implementation + documentation

--- a/WhisPeriment.ipynb
+++ b/WhisPeriment.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -405,148 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = whisper(audio_file, sample_rate=target_rate, framework=\"pt\", max_new_tokens=100, max_length=100)\n",
-    "print(text)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "languages = {\"af_za\": \"Afrikaans\", \"am_et\": \"Amharic\", \"ar_eg\": \"Arabic\", \"as_in\": \"Assamese\", \"az_az\": \"Azerbaijani\", \"be_by\": \"Belarusian\", \"bg_bg\": \"Bulgarian\", \"bn_in\": \"Bengali\", \"bs_ba\": \"Bosnian\", \"ca_es\": \"Catalan\", \"cmn_hans_cn\": \"Chinese\", \"cs_cz\": \"Czech\", \"cy_gb\": \"Welsh\", \"da_dk\": \"Danish\", \"de_de\": \"German\", \"el_gr\": \"Greek\", \"en_us\": \"English\", \"es_419\": \"Spanish\", \"et_ee\": \"Estonian\", \"fa_ir\": \"Persian\", \"fi_fi\": \"Finnish\", \"fil_ph\": \"Tagalog\", \"fr_fr\": \"French\", \"gl_es\": \"Galician\", \"gu_in\": \"Gujarati\", \"ha_ng\": \"Hausa\", \"he_il\": \"Hebrew\", \"hi_in\": \"Hindi\", \"hr_hr\": \"Croatian\", \"hu_hu\": \"Hungarian\", \"hy_am\": \"Armenian\", \"id_id\": \"Indonesian\", \"is_is\": \"Icelandic\", \"it_it\": \"Italian\", \"ja_jp\": \"Japanese\", \"jv_id\": \"Javanese\", \"ka_ge\": \"Georgian\", \"kk_kz\": \"Kazakh\", \"km_kh\": \"Khmer\", \"kn_in\": \"Kannada\", \"ko_kr\": \"Korean\", \"lb_lu\": \"Luxembourgish\", \"ln_cd\": \"Lingala\", \"lo_la\": \"Lao\", \"lt_lt\": \"Lithuanian\", \"lv_lv\": \"Latvian\", \"mi_nz\": \"Maori\", \"mk_mk\": \"Macedonian\", \"ml_in\": \"Malayalam\", \"mn_mn\": \"Mongolian\", \"mr_in\": \"Marathi\", \"ms_my\": \"Malay\", \"mt_mt\": \"Maltese\", \"my_mm\": \"Myanmar\", \"nb_no\": \"Norwegian\", \"ne_np\": \"Nepali\", \"nl_nl\": \"Dutch\", \"oc_fr\": \"Occitan\", \"pa_in\": \"Punjabi\", \"pl_pl\": \"Polish\", \"ps_af\": \"Pashto\", \"pt_br\": \"Portuguese\", \"ro_ro\": \"Romanian\", \"ru_ru\": \"Russian\", \"sd_in\": \"Sindhi\", \"sk_sk\": \"Slovak\", \"sl_si\": \"Slovenian\", \"sn_zw\": \"Shona\", \"so_so\": \"Somali\", \"sr_rs\": \"Serbian\", \"sv_se\": \"Swedish\", \"sw_ke\": \"Swahili\", \"ta_in\": \"Tamil\", \"te_in\": \"Telugu\", \"tg_tj\": \"Tajik\", \"th_th\": \"Thai\", \"tr_tr\": \"Turkish\", \"uk_ua\": \"Ukrainian\", \"ur_pk\": \"Urdu\", \"uz_uz\": \"Uzbek\", \"vi_vn\": \"Vietnamese\", \"yo_ng\": \"Yoruba\"}\n",
-    "selection = widgets.Dropdown(\n",
-    "    options=[(\"Select language\", None), (\"----------\", None)] + sorted([(f\"{v} ({k})\", k) for k, v in languages.items()]),\n",
-    "    value=\"ko_kr\",\n",
-    "    description='Language:',\n",
-    "    disabled=False,\n",
-    ")\n",
-    "\n",
-    "selection\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "lang = selection.value\n",
-    "language = languages[lang]\n",
-    "\n",
-    "assert lang is not None, \"Please select a language\"\n",
-    "print(f\"Selected language: {language} ({lang})\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#whis      = WhisperProcessor.from_pretrained('openai/whisper-medium', language=\"French\")\n",
-    "#tokenizer = WhisperTokenizer.from_pretrained(\"openai/whisper-medium\", language=\"French\")\n",
-    "\n",
-    "processor         = WhisperProcessor.from_pretrained(\"openai/whisper-base\")\n",
-    "model             = WhisperForConditionalGeneration.from_pretrained(\"openai/whisper-base\")\n",
-    "#model             = WhisperModel.from_pretrained(\"openai/whisper-base\")\n",
-    "feature_extractor = WhisperFeatureExtractor.from_pretrained(\"openai/whisper-base\")\n",
-    "\n",
-    "model.config.forced_decoder_ids = processor.get_decoder_prompt_ids(language = \"fr\", task = \"transcribe\")\n",
-    "configuration     = model.config\n",
-    "#print(configuration)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_speech   = frames\n",
-    "input_features = processor(input_speech, ,return_tensors=\"pt\").input_features \n",
-    "predicted_ids  = model.generate(input_features)\n",
-    "transcription  = processor.batch_decode(predicted_ids)\n",
-    "print(transcription)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.__doc__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.ge\n",
-    "\n",
-    "audio = WhisperModel. .load_audio(audio_file)\n",
-    "audio = WhisperModel.pad_or_trim(audio)\n",
-    "\n",
-    "# make log-Mel spectrogram and move to the same device as the model\n",
-    "mel = whisper.log_mel_spectrogram(audio).to(model.device)\n",
-    "\n",
-    "# detect the spoken language\n",
-    "_, probs = model.detect_language(mel)\n",
-    "print(f\"Detected language: {max(probs, key=probs.get)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# instantiate the tokenizer and set the prefix token\n",
-    "#tokenizer = WhisperTokenizer.from_pretrained(\"openai/whisper-medium\", language=\"French\")\n",
-    "\n",
-    "# now switch the prefix token from Spanish to French\n",
-    "#tokenizer.set_prefix_tokens(language=\"french\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "text = whis(frames, sampling_rate=target_rate)\n",
-    "print(text)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "https://github.com/amrrs/pyaudiorec/blob/main/audio_rec.ipynb\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# identifu the audio input devices\n",
+    "# identify the audio input devices\n",
     "import pyaudio\n",
     "p          = pyaudio.PyAudio()\n",
     "info       = p.get_host_api_info_by_index(0)\n",
@@ -554,23 +413,6 @@
     "for i in range(0, numdevices):\n",
     "        if (p.get_device_info_by_host_api_device_index(0, i).get('maxInputChannels')) > 0:\n",
     "            print( \"Input Device id \", i, \" - \", p.get_device_info_by_host_api_device_index(0, i).get('name'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not torch.backends.cudnn.enabled:\n",
-    "    torch.backends.cudnn.enabled = True\n",
-    "\n",
-    "if not torch.backends.cudnn.deterministic:\n",
-    "    torch.backends.cudnn.deterministic = True\n",
-    "\n",
-    "for param in model.parameters():\n",
-    "    if param.dtype != model_dtype:\n",
-    "        print(f\"Model does not support float16 precision\")\n"
    ]
   },
   {
@@ -642,29 +484,6 @@
     "wf.setframerate(target_rate)\n",
     "wf.writeframes(b''.join(frames))\n",
     "wf.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "p      = pyaudio.PyAudio()       # Set up audio stream from microphone\n",
-    "stream = p.open(format=pyaudio.paInt16, channels=1, rate=sample_rate, input=True)\n",
-    "vad    = webrtcvad.Vad()         # Set up Voice Activity Detector (VAD)\n",
-    "\n",
-    "while True:                      # Process audio data in a loop\n",
-    "    data      = stream.read(frame_length, exception_on_overflow=False)\n",
-    "    is_speech = vad.is_speech(data, sample_rate)\n",
-    "    if is_speech:\n",
-    "        print(\"Speech detected!\")\n",
-    "\n",
-    "# Close audio stream\n",
-    "stream.stop_stream()\n",
-    "stream.close()\n",
-    "p.terminate()"
    ]
   },
   {
