--- a/WhisPeriment.ipynb
+++ b/WhisPeriment.ipynb
@@ -63,13 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Env Name     : hugg\n",
       "Python       : 3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]\n",
       "wave         : Nov version infos available\n",
       "torch        : 1.13.1+cu117\n",
@@ -83,6 +84,7 @@
     "import wave\n",
     "import torch \n",
     "import sys\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -90,12 +92,12 @@
     "from pvrecorder      import PvRecorder\n",
     "from transformers    import WhisperProcessor, WhisperForConditionalGeneration, __version__ \n",
     "from IPython.display import Audio, display\n",
-    "\n",
-    "print(f\"Python       : {              sys.version}\")\n",
-    "print(f\"wave         : Nov version infos available\")\n",
-    "print(f\"torch        : {        torch.__version__}\")\n",
-    "print(f\"numpy        : {           np.__version__}\")\n",
-    "print(f\"transformers : {             __version__ }\")"
+    "print(f\"Env Name     : {sys.executable.split('/')[-3]}\")\n",
+    "print(f\"Python       : {                  sys.version}\")\n",
+    "print(f\"wave         : Nov version infos available\"    )\n",
+    "print(f\"torch        : {            torch.__version__}\")\n",
+    "print(f\"numpy        : {               np.__version__}\")\n",
+    "print(f\"transformers : {                 __version__ }\")"
    ]
   },
   {
