Cuda & FP16 implementation + documentation

--- a/WhisPeriment.ipynb
+++ b/WhisPeriment.ipynb
@@ -42,6 +42,11 @@
     "pip install -U webrtcvad\n",
     "\n",
     "\"\"\"\n",
+    "# to use with ROCKm (AMD boards) replace the torch install command by the following one (untested) \n",
+    "# check this page for further install instructions: https://rocmdocs.amd.com/en/latest/ and https://docs.amd.com/bundle/ROCm-Installation-Guide-v5.4.1/page/How_to_Install_ROCm.html\n",
+    "#\n",
+    "# pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/rocm5.2\n",
+    "\n",
     "\n",
     "# ffmpeg need to be installed on your computer on linux with: \n",
     "\"\"\"\n",
@@ -83,8 +88,7 @@
     "import struct\n",
     "import wave\n",
     "import torch \n",
-    "import sys\n",
-    "import os\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -92,6 +96,7 @@
     "from pvrecorder      import PvRecorder\n",
     "from transformers    import WhisperProcessor, WhisperForConditionalGeneration, __version__ \n",
     "from IPython.display import Audio, display\n",
+    "\n",
     "print(f\"Env Name     : {sys.executable.split('/')[-3]}\")\n",
     "print(f\"Python       : {                  sys.version}\")\n",
     "print(f\"wave         : Nov version infos available\"    )\n",
@@ -105,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write the model documentation to \"Help.txt\"\n",
+    "## Write the whisper model documentation to \"Help.txt\"\n",
     "Use the autodoc feature to learn about the availiable methods in the whisper model and write it into a file"
    ]
   },
