Cuda & FP16 implementation + documentation

--- a/WhisPeriment.ipynb
+++ b/WhisPeriment.ipynb
@@ -29,6 +29,7 @@
    "source": [
     "# Things to execute to have the right environement to run this\n",
     "\"\"\"\n",
+    "conda deactivate\n",
     "conda env remove -n hugg\n",
     "conda create --name hugg python=3.11 pyaudio -y\n",
     "conda activate hugg\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
     "import struct\n",
     "import wave\n",
     "import torch \n",
-    "\n",
+    "import sys\n",
     "\n",
     "import numpy as np\n",
     "\n",
